--- a/ru/index.html
+++ b/ru/index.html
@@ -296,7 +296,7 @@
 
 
 
-  <link rel="alternate" hreflang="en" href="https://example.com/en/" />
+  <link rel="alternate" hreflang="en" href="https://example.com/" />
 
 <link rel="alternate" hreflang="ru" href="https://example.com/ru/" />
 <link rel="canonical" href="https://example.com/ru/" />
@@ -669,7 +669,7 @@
               <span>Русский</span>
             </div>
             
-            <a class="dropdown-item" href="https://example.com/en/" data-target="/en/">
+            <a class="dropdown-item" href="https://example.com/" data-target="/">
               <span>English</span>
             </a>
             
