--- a/ru/project/index.html
+++ b/ru/project/index.html
@@ -280,7 +280,7 @@
 
 
 
-  <link rel="alternate" hreflang="en" href="https://example.com/en/project/" />
+  <link rel="alternate" hreflang="en" href="https://example.com/project/" />
 
 <link rel="alternate" hreflang="ru" href="https://example.com/ru/project/" />
 <link rel="canonical" href="https://example.com/ru/project/" />
@@ -637,7 +637,7 @@
               <span>Русский</span>
             </div>
             
-            <a class="dropdown-item" href="https://example.com/en/project/">
+            <a class="dropdown-item" href="https://example.com/project/">
               <span>English</span>
             </a>
             
