--- a/ru/talk/example-talk/index.html
+++ b/ru/talk/example-talk/index.html
@@ -280,7 +280,7 @@
 
 
 
-  <link rel="alternate" hreflang="en" href="https://example.com/en/talk/example-talk/" />
+  <link rel="alternate" hreflang="en" href="https://example.com/talk/example-talk/" />
 
 <link rel="alternate" hreflang="ru" href="https://example.com/ru/talk/example-talk/" />
 <link rel="canonical" href="https://example.com/ru/talk/example-talk/" />
@@ -691,7 +691,7 @@
               <span>Русский</span>
             </div>
             
-            <a class="dropdown-item" href="https://example.com/en/talk/example-talk/">
+            <a class="dropdown-item" href="https://example.com/talk/example-talk/">
               <span>English</span>
             </a>
             
