--- a/ru/event/index.html
+++ b/ru/event/index.html
@@ -280,7 +280,7 @@
 
 
 
-  <link rel="alternate" hreflang="en" href="https://example.com/en/event/" />
+  <link rel="alternate" hreflang="en" href="https://example.com/event/" />
 
 <link rel="alternate" hreflang="ru" href="https://example.com/ru/event/" />
 <link rel="canonical" href="https://example.com/ru/event/" />
@@ -637,7 +637,7 @@
               <span>Русский</span>
             </div>
             
-            <a class="dropdown-item" href="https://example.com/en/event/">
+            <a class="dropdown-item" href="https://example.com/event/">
               <span>English</span>
             </a>
             
