--- a/ru/project/example/index.html
+++ b/ru/project/example/index.html
@@ -280,7 +280,7 @@
 
 
 
-  <link rel="alternate" hreflang="en" href="https://example.com/en/project/example/" />
+  <link rel="alternate" hreflang="en" href="https://example.com/project/example/" />
 
 <link rel="alternate" hreflang="ru" href="https://example.com/ru/project/example/" />
 <link rel="canonical" href="https://example.com/ru/project/example/" />
@@ -687,7 +687,7 @@
               <span>Русский</span>
             </div>
             
-            <a class="dropdown-item" href="https://example.com/en/project/example/">
+            <a class="dropdown-item" href="https://example.com/project/example/">
               <span>English</span>
             </a>
             
