--- a/ru/publication-type/1/index.html
+++ b/ru/publication-type/1/index.html
@@ -280,7 +280,7 @@
 
 
 
-  <link rel="alternate" hreflang="en" href="https://example.com/en/publication-type/1/" />
+  <link rel="alternate" hreflang="en" href="https://example.com/publication-type/1/" />
 
 <link rel="alternate" hreflang="ru" href="https://example.com/ru/publication-type/1/" />
 <link rel="canonical" href="https://example.com/ru/publication-type/1/" />
@@ -637,7 +637,7 @@
               <span>Русский</span>
             </div>
             
-            <a class="dropdown-item" href="https://example.com/en/publication-type/1/">
+            <a class="dropdown-item" href="https://example.com/publication-type/1/">
               <span>English</span>
             </a>
             
